AUS-3045 Fix problem with help menu moving when scrollbars visible

--- a/src/app/layout/modelview/modelview.component.scss
+++ b/src/app/layout/modelview/modelview.component.scss
@@ -88,9 +88,9 @@
     #helpButton {
         font-size: 12px;
         font-weight: 400;
-        position: absolute;
+        position: fixed;
         z-index: 2000;
-        top: 5px;
+        top: 60px;
         right: 0;
         padding: 0.1rem 0.5rem;
         background: #1a1a1a;
